# sony-headphones-control-py

./: README.md  pyproject.toml  setup.py
sony-headphones-control/: __init__.py
sony_headphones_control_py/: __main__.py  console.py  control.py
